2006-06-23  Richard Sandiford  <richard@codesourcery.com>

	* binutils-all/localize-hidden-1.s,
	* binutils-all/localize-hidden-1.d,
	* binutils-all/localize-hidden-2.s,
	* binutils-all/localize-hidden-2.d: New tests.
	* binutils-all/objcopy.exp: Run them.

2006-06-06  Paul Brook  <paul@codesourcery.com>

	* binutils-all/arm/objdump.exp: New file.
	* binutils-all/arm/thumb2-cond.s: New test.

2006-05-03  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/copy-3.d: Fix a typo.

2006-05-03  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/copy-3.d: New.

	* objcopy.exp: Run copy-3.

2006-05-02  Dave Korn  <dave.korn@artimi.com>

	* binutils-all/copy-1.d (name):  Correct spelling of 'setting'.
	* binutils-all/copy-1.d (name):  Likewise.

2006-05-02  Nick Clifton  <nickc@redhat.com>

	* binutils-all/copy-2.d: Change the name of the section whose
	flags are changed to "foo" so that the test will work with PE
	based targets.  Skip this test for AOUT based targeted.
	* binutils-all/copytest.s: New file.

2006-05-01  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/objcopy.exp: Run "copy-1" for ELF only.

2006-05-01  Ben Elliston  <bje@au.ibm.com>

	* binutils-all/objcopy.exp (objcopy_test_readelf): Remove stray ;

2006-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/2593
	* binutils-all/copy-1.d: New file.
	* binutils-all/copy-1.s: Likewise.
	* binutils-all/copy-2.d: Likewise.

	* binutils-all/objcopy.exp: Add run_dump_test "copy-1" and
	run_dump_test "copy-2".

	* lib/utils-lib.exp (run_dump_test): New.
	(slurp_options): Likewise.
	(regexp_diff): Likewise.
	(file_contents): Likewise.
	(verbose_eval): Likewise.

2006-04-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/2467
	* binutils-all/objcopy.exp (strip_test): Also test "strip -g"
	on archive.

2006-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/utils-lib.exp (default_binutils_run): Check exit status.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* config/default.exp: Do not load the unneeded util-defs.exp.
