@@ -1,3 +1,8 @@
+2006-06-24  Richard Sandiford  <richard@codesourcery.com>
+
+	* binutils-all/localize-hidden-1.d: Use objdump --syms instead
+	of readelf.
+
 2006-06-23  Richard Sandiford  <richard@codesourcery.com>
 
 	* binutils-all/localize-hidden-1.s,
